--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="#">Home</a></li>
 	        	<li><a href="#">Bounty Handbook</a></li>
         		<li><a href="#">Big World Quests</a></li>
         		<li><a href="#">Boss Monsters</a></li>
