--- a/index.html
+++ b/index.html
@@ -1,29 +1,79 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Naruto Slugfest Guide</title>
+		<title><a href="/master/index.html" style="color:">Naruto Slugfest Guide</a></title>
 		<link rel="stylesheet" type="text/css" href="/master/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="#">Home</a></li>
-	        	<li><a href="#">Bounty Handbook</a></li>
-        		<li><a href="#">Big World Quests</a></li>
-        		<li><a href="#">Boss Monsters</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Welcome</h1>
-				<p>Various guides on Naruto Slugfest</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="#">email</a></li>
-        		<li><a href="#">https://narutoslugfestguide.github.io/</a></li>
-			</ul>
-		</footer>
-	</body>
+
+<header>
+  <a href="narutoslugfestguide.html" style="color:">
+  <h2>Naruto Slugfest Guide</h2>
+  </a>
+</header>
+
+<div class="navbar";>
+
+  <div class="dropdown";>
+    <button class="dropbtn";><a href="#";> Bounty Handbook
+      <i class="fa fa-caret-down"></i>
+    </a></button>
+    <div class="dropdown-content">
+      <a href="#"> S Class </a>
+      <a href="#"> A Class </a>
+      <a href="#"> B Class </a>
+      <a href="#"> C Class </a>
+      <a href="#"> D Class </a>
+    </div>
+  </div> 
+
+  <div class="dropdown";>
+    <button class="dropbtn"><a href="#";> Boss Monsters
+      <i class="fa fa-caret-down"></i>
+    </a></button>
+    <div class="dropdown-content">
+      <a href="https://drive.google.com/view?id=15HhpoVYZoZUx-OYPsmeW6hGEaMVVs4LG"> Land of River </a>
+      <a href="sunagakure_boss_location.html"> Sunagakure </a>
+      <a href="https://drive.google.com/view?id=1DVIYgCVrhUIzPrlkayTYmwBH-9iVd-XF"> Konohagakure </a>
+      <a href="amergakure_boss_location.html"> Amegakure </a>
+    </div>
+
+  </div> 
+  <div class="dropdown";>
+    <button class="dropbtn"><a href="#";> Big World Quests
+      <i class="fa fa-caret-down"></i>
+    </a></button>
+    <div class="dropdown-content">
+      <a href="#"> Red, Blue, Yellow Eggs </a>
+      <a href="#"> Help Trader </a>
+      <a href="#"> Strange Things by the River </a>
+    </div>
+  </div> 
+
+  </div> 
+</div>
+<section>
+  <nav>
+    <ul>
+      <li><a href="#"> # </a></li>
+<br>
+      <li><a href="#"> # </a></li>
+<br>
+      <li><a href="#"> #</a></li>
+<br>
+    </ul>
+  </nav>
+  
+  <article>
+    <p>Various guides on Naruto Slugfest</p>
+    <p></p>
+
+  </article>
+</section>
+
+<footer>
+  <p>Footer</p>
+</footer>
+
+</body>
 </html>
