--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title><a href="/master/index.html" style="color:">Naruto Slugfest Guide</a></title>
-		<link rel="stylesheet" type="text/css" href="/master/main.css">
+		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
 	<body>
 
