--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><a href="/master/index.html" style="color:">Naruto Slugfest Guide</a></title>
+		<title>Naruto Slugfest Guide</title>
 		<link rel="stylesheet" type="text/css" href="/master/main.css">
 	</head>
 	<body>
