--- a/landofriver.html
+++ b/landofriver.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Land of River Boss Location</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
+  <head>  
+  <title>Land of River Boss Location</title>
+  <link rel="stylesheet" type="text/css" href="/main.css">
+  </head>
 <body>
 
 <header>
