--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <i class="fa fa-caret-down"></i>
     </a></button>
     <div class="dropdown-content">
-      <a href="https://drive.google.com/view?id=15HhpoVYZoZUx-OYPsmeW6hGEaMVVs4LG"> Land of River </a>
+      <a href="/landofriver.html"> Land of River </a>
       <a href="sunagakure_boss_location.html"> Sunagakure </a>
       <a href="https://drive.google.com/view?id=1DVIYgCVrhUIzPrlkayTYmwBH-9iVd-XF"> Konohagakure </a>
       <a href="amergakure_boss_location.html"> Amegakure </a>
