--- a/landofriver.html
+++ b/landofriver.html
@@ -32,7 +32,7 @@
       <i class="fa fa-caret-down"></i>
     </a></button>
     <div class="dropdown-content">
-      <a href="landofriver_boss_location.html"> Land of River </a>
+      <a href="/landofriver.html"> Land of River </a>
       <a href="sunagakure_boss_location.html"> Sunagakure </a>
       <a href="konohagakure_boss_location.html"> Konohagakure </a>
       <a href="amergakure_boss_location.html"> Amegakure </a>
@@ -73,9 +73,9 @@
     <image src="furious_alpha_wolf.jpg"; style="width:250px;height:250px;";>
     </a>
 
-    <a href="rampaging_thug.jpg" target="_blank" style="color:black">
+    <a href="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ" target="_blank" style="color:black">
     <p style="text-align:left"> (B) <b>Rampaging Thug</b> (Level 30)</p>
-    <p><image src="rampaging_thug.jpg"; style="width:250px;height:250px;"></p>
+    <p><image src="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ"; style="width:250px;height:250px;"></p>
 
     </a>
 
