--- a/landofriver.html
+++ b/landofriver.html
@@ -66,11 +66,12 @@
   
   <article>
     <h2>Land of River</h2>
-    <p><image src="landofriver_loc.png"; style="width:600px;height:500px;"></p>
+    <a href="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo" target="_blank">
+    <p><image src="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo"; style="width:600px;height:500px;"></p></a>
 
-    <a href="furious_alpha_wolf.jpg" target="_blank" style="color:black">
+    <a href="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k" target="_blank" style="color:black">
     <p style="text-align:left"> (A) <b>Furious Alpha Wolf</b> (Level 30) </p>
-    <image src="furious_alpha_wolf.jpg"; style="width:250px;height:250px;";>
+    <image src="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k"; style="width:250px;height:250px;";>
     </a>
 
     <a href="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ" target="_blank" style="color:black">
