--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </a></button>
     <div class="dropdown-content">
       <a href="/landofriver.html"> Land of River </a>
-      <a href="sunagakure_boss_location.html"> Sunagakure </a>
-      <a href="https://drive.google.com/view?id=1DVIYgCVrhUIzPrlkayTYmwBH-9iVd-XF"> Konohagakure </a>
-      <a href="amergakure_boss_location.html"> Amegakure </a>
+      <a href="/sunagakure.html"> Sunagakure </a>
+      <a href="/konohagakure.html"> Konohagakure </a>
+      <a href="/amergakure.html"> Amegakure </a>
     </div>
 
   </div> 
