--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="/landofriver.html"> Land of River </a>
       <a href="/sunagakure.html"> Sunagakure </a>
       <a href="/konohagakure.html"> Konohagakure </a>
-      <a href="/amergakure.html"> Amegakure </a>
+      <a href="/amegakure.html"> Amegakure </a>
     </div>
 
   </div> 
