--- a/amegakure.html
+++ b/amegakure.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title> Amegakure Boss Locations </title>
+<link rel="stylesheet" type="text/css" href="/main.css">
 </head>
 <body>
 
