--- a/landofriver.html
+++ b/landofriver.html
@@ -6,54 +6,8 @@
   </head>
 <body>
 
-<header>
-  <a href="narutoslugfestguide.html" style="color:">
-  <h2>Naruto Slugfest Guide</h2>
-  </a>
-</header>
+<link rel="stylesheet" href="/navbar.html">
 
-<div class="navbar";>
-
-  <div class="dropdown";>
-    <button class="dropbtn";><a href="#";> Bounty Handbook
-      <i class="fa fa-caret-down"></i>
-    </a></button>
-    <div class="dropdown-content">
-      <a href="#"> S Class </a>
-      <a href="#"> A Class </a>
-      <a href="#"> B Class </a>
-      <a href="#"> C Class </a>
-      <a href="#"> D Class </a>
-    </div>
-  </div> 
-
-  <div class="dropdown";>
-    <button class="dropbtn"><a href="#";> Boss Monsters
-      <i class="fa fa-caret-down"></i>
-    </a></button>
-    <div class="dropdown-content">
-      <a href="/landofriver.html"> Land of River </a>
-      <a href="sunagakure_boss_location.html"> Sunagakure </a>
-      <a href="konohagakure_boss_location.html"> Konohagakure </a>
-      <a href="amergakure_boss_location.html"> Amegakure </a>
-    </div>
-
-  </div> 
-  <div class="dropdown";>
-    <button class="dropbtn"><a href="#";> Big World Quests
-      <i class="fa fa-caret-down"></i>
-    </a></button>
-    <div class="dropdown-content">
-      <a href="#"> Red, Blue, Yellow Eggs </a>
-      <a href="#"> Help Trader </a>
-      <a href="#"> Strange Things by the River </a>
-    </div>
-  </div> 
-
-  </div> 
-</div>
-<section>
-  <nav>
     <ul>
       <li><a href="#"> # </a></li>
 <br>
