--- a/landofriver.html
+++ b/landofriver.html
@@ -5,19 +5,15 @@
   <link rel="stylesheet" type="text/css" href="/main.css">
   </head>
 <body>
-
-<link rel="stylesheet" href="/navbar.html">
-
-    <ul>
-      <li><a href="#"> # </a></li>
-<br>
-      <li><a href="#"> # </a></li>
-<br>
-      <li><a href="#"> #</a></li>
-<br>
-    </ul>
+<header>
+  <a href="/index.html" style="color:white">
+  <h2>Naruto Slugfest Guide</h2>
+  </a>
+</header>
+  <nav>
+  <link rel="stylesheet" href="/navbar.html">
   </nav>
-  
+<section>
   <article>
     <h2>Land of River</h2>
     <a href="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo" target="_blank">
