--- a/landofriver.html
+++ b/landofriver.html
@@ -10,9 +10,9 @@
   <h2>Naruto Slugfest Guide</h2>
   </a>
 </header>
-  <nav>
+  <div>
   <link rel="stylesheet" href="/navbar.html">
-  </nav>
+  </div>
 <section>
   <article>
     <h2>Land of River</h2>
