--- a/landofriver.html
+++ b/landofriver.html
@@ -10,8 +10,8 @@
   <h2>Naruto Slugfest Guide</h2>
   </a>
 </header>
-  <div>
-  <link rel="stylesheet" href="/navbar.html">
+  <div class="navbar";>
+    <link rel="stylesheet" href="/navbar.html">
   </div>
 <section>
   <article>
