--- a/landofriver.html
+++ b/landofriver.html
@@ -11,7 +11,7 @@
   </a>
 </header>
   <div class="navbar";>
-    <link rel="stylesheet" href="/navbar.html">
+    <script src="/navbar.html"></script>
   </div>
 <section>
   <article>
