--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
+<div class="navbar" id="navbar";>
+  
   <div class="dropdown";>
-    <button class="dropbtn";><a href="#";> Bounty Handbook
-      <i class="fa fa-caret-down"></i>
-    </a></button>
+      <button class="dropbtn";><a href="#";> Bounty Handbook <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
       <a href="/sclass.html"> S Class </a>
       <a href="/aclass.html"> A Class </a>
@@ -12,26 +12,22 @@
   </div> 
 
   <div class="dropdown";>
-    <button class="dropbtn"><a href="#";> Boss Monsters
-      <i class="fa fa-caret-down"></i>
-    </a></button>
+      <button class="dropbtn"><a href="#";> Boss Monsters <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
       <a href="/landofrive.html"> Land of River </a>
       <a href="/sunagakure.html"> Sunagakure </a>
       <a href="/konohagakure.html"> Konohagakure </a>
       <a href="/amergakure.html"> Amegakure </a>
     </div>
-
   </div> 
+  
   <div class="dropdown";>
-    <button class="dropbtn"><a href="#";> Big World Quests
-      <i class="fa fa-caret-down"></i>
-    </a></button>
+      <button class="dropbtn"><a href="#";> Big World Quests<i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
       <a href="/rby.html"> Red, Blue, Yellow Eggs </a>
       <a href="/ht.html"> Help Trader </a>
       <a href="/stbtr.html"> Strange Things by the River </a>
     </div>
   </div> 
-
-  </div> 
+  
+</div> 
