--- a/landofriver.html
+++ b/landofriver.html
@@ -10,9 +10,11 @@
   <h2>Naruto Slugfest Guide</h2>
   </a>
 </header>
-  <div class="navbar";>
-    <script src="/navbar.html"></script>
-  </div>
+
+$(function() {
+    $("#navbar").load("navbar.html");
+});
+
 <section>
   <article>
     <h2>Land of River</h2>
