--- a/landofriver.html
+++ b/landofriver.html
@@ -10,10 +10,8 @@
   <h2>Naruto Slugfest Guide</h2>
   </a>
 </header>
-
-$(function() {
-    $("#navbar").load("navbar.html");
-});
+  <script>"/navbar.html"
+  </script>
 
 <section>
   <article>
