--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,6 @@
-<div class="navbar" id="navbar";>
+<script>
+function includeHTML() {
+<div class="navbar";>
   
   <div class="dropdown";>
       <button class="dropbtn";><a href="#";> Bounty Handbook <i class="fa fa-caret-down"></i></a></button>
@@ -30,4 +32,6 @@
     </div>
   </div> 
   
-</div> 
+</div>
+}
+</script>
