--- a/landofriver.html
+++ b/landofriver.html
@@ -10,8 +10,13 @@
   <h2>Naruto Slugfest Guide</h2>
   </a>
 </header>
-  <script>"/navbar.html"
-  </script>
+<div w3-include-html="/navbar.html"></div> 
+
+<script>
+includeHTML();
+</script>
+
+</body>
 
 <section>
   <article>
