--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,13 @@
-<script>
-function includeHTML() {
+<head>
+		<title>Naruto Slugfest Guide</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
+</head>
+<body>
+
+	<header>
+	<a href="narutoslugfestguide.html" style="color:"><h2>Naruto Slugfest Guide</h2></a>
+	</header>
+
 <div class="navbar";>
   
   <div class="dropdown";>
@@ -33,5 +41,3 @@ function includeHTML() {
   </div> 
   
 </div>
-}
-</script>
