--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <head>
 		<title>Naruto Slugfest Guide</title>
-		<link rel="stylesheet" type="text/css" href="css.css">
+		<link rel="stylesheet" type="text/css" href="/main.css">
 </head>
 <body>
 
