--- a/landofriver.html
+++ b/landofriver.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>  
+<head>  
   <title>Land of River Boss Location</title>
-<script>
-function includeHTML() {
-  var z, i, elmnt, file, xhttp;
-  /*loop through a collection of all HTML elements:*/
-  z = document.getElementsByTagName("*");
-  for (i = 0; i < z.length; i++) {
-    elmnt = z[i];
+	<script>
+	function includeHTML() {
+	var z, i, elmnt, file, xhttp;
+	/*loop through a collection of all HTML elements:*/
+	z = document.getElementsByTagName("*");
+	for (i = 0; i < z.length; i++) {
+		elmnt = z[i];
     /*search for elements with a certain atrribute:*/
     file = elmnt.getAttribute("w3-include-html");
     if (file) {
@@ -28,16 +28,13 @@ function includeHTML() {
       /*exit the function:*/
       return;
     }
-  }
-};
-</script>
-  </head>
+	}
+	};
+	</script>
+</head>
 <body>
 	<div w3-include-html="/navbar.html"></div> 
-
-	<script>
-	includeHTML();
-	</script>
+	<script>includeHTML();</script>
 
 	<section>
 		<article>
