--- a/navbar.html
+++ b/navbar.html
@@ -1,11 +1,10 @@
 <head>
-		<title>Naruto Slugfest Guide</title>
 		<link rel="stylesheet" type="text/css" href="/main.css">
 </head>
 <body>
 
 	<header>
-	<a href="narutoslugfestguide.html" style="color:"><h2>Naruto Slugfest Guide</h2></a>
+	<a href="/index.html" style="color:"><h2>Naruto Slugfest Guide</h2></a>
 	</header>
 
 <div class="navbar";>
@@ -39,6 +38,12 @@
       <a href="/stbtr.html"> Strange Things by the River </a>
     </div>
   </div> 
-  
+	<nav>
+		<ul>
+		<li><a href="#"> # </a></li><br>
+		<li><a href="#"> # </a></li><br>
+		<li><a href="#"> #</a></li><br>
+		</ul>
+	</nav>
 </div>
 </body>
