--- a/navbar.html
+++ b/navbar.html
@@ -37,7 +37,8 @@
       <a href="/ht.html"> Help Trader </a>
       <a href="/stbtr.html"> Strange Things by the River </a>
     </div>
-  </div> 
+  </div>
+	<section>
 	<nav>
 		<ul>
 		<li><a href="#"> # </a></li><br>
@@ -45,5 +46,6 @@
 		<li><a href="#"> #</a></li><br>
 		</ul>
 	</nav>
+	</section>
 </div>
 </body>
