--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 	<script>includeHTML();</script>
 	
 	<section>
+	<div w3-include-html="/navbar.html"></div>
 	<article>
     <p>Various guides on Naruto Slugfest</p>
     <p></p>
 	</article>
-	
 	</section>
 
 	<footer>
