--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<script>includeHTML();</script>
 	
 	<section>
-	<div w3-include-html="/navbar.html"></div>
+	<div w3-include-html="/sidebar.html"></div>
 	<article>
     <p>Various guides on Naruto Slugfest</p>
     <p></p>
