--- a/navbar.html
+++ b/navbar.html
@@ -4,7 +4,7 @@
 <body>
 
 	<header>
-	<a href="/index.html" style="color:"><h2>Naruto Slugfest Guide</h2></a>
+	<a href="https://narutoslugfestguide.github.io/" style="color:"><h2>Naruto Slugfest Guide</h2></a>
 	</header>
 
 <div class="navbar";>
