--- a/landofriver.html
+++ b/landofriver.html
@@ -37,6 +37,7 @@
 	<script>includeHTML();</script>
 
 	<section>
+	<div w3-include-html="/sidebar.html"></div>
 		<article>
 		<h2>Land of River</h2>
 		<a href="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo" target="_blank">
