--- a/navbar.html
+++ b/navbar.html
@@ -23,7 +23,7 @@
   <div class="dropdown";>
       <button class="dropbtn"><a href="#";> Boss Monsters <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
-      <a href="/landofrive.html"> Land of River </a>
+      <a href="/landofriver.html"> Land of River </a>
       <a href="/sunagakure.html"> Sunagakure </a>
       <a href="/konohagakure.html"> Konohagakure </a>
       <a href="/amergakure.html"> Amegakure </a>
