--- a/amegakure.html
+++ b/amegakure.html
@@ -1,73 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title> Amegakure Boss Locations </title>
-<link rel="stylesheet" type="text/css" href="/main.css">
+<head>  
+  <title>Amegakure Boss Location</title>
+	<script>
+	function includeHTML() {
+	var z, i, elmnt, file, xhttp;
+	/*loop through a collection of all HTML elements:*/
+	z = document.getElementsByTagName("*");
+	for (i = 0; i < z.length; i++) {
+		elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          includeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+	}
+	};
+	</script>
 </head>
 <body>
+	<div w3-include-html="/navbar.html"></div> 
+	<script>includeHTML();</script>
 
-<header>
-  <a href="/index.html" style="color:white">
-  <h2>Naruto Slugfest Guide</h2>
-  </a>
-</header>
-
-<div class="navbar";>
-
-  <div class="dropdown";>
-    <button class="dropbtn";><a href="#";> Bounty Handbook
-      <i class="fa fa-caret-down"></i>
-    </a></button>
-    <div class="dropdown-content">
-      <a href="#"> S Class </a>
-      <a href="#"> A Class </a>
-      <a href="#"> B Class </a>
-      <a href="#"> C Class </a>
-      <a href="#"> D Class </a>
-    </div>
-  </div> 
-
-  <div class="dropdown";>
-    <button class="dropbtn"><a href="#";> Boss Monsters
-      <i class="fa fa-caret-down"></i>
-    </a></button>
-    <div class="dropdown-content">
-      <a href="/landofriver.html"> Land of River </a>
-      <a href="/sunagakure.html"> Sunagakure </a>
-      <a href="/konohagakure.html"> Konohagakure </a>
-      <a href="/amergakure.html"> Amegakure </a>
-    </div>
-
-  </div> 
-  <div class="dropdown";>
-    <button class="dropbtn"><a href="#";> Big World Quests
-      <i class="fa fa-caret-down"></i>
-    </a></button>
-    <div class="dropdown-content">
-      <a href="#"> Red, Blue, Yellow Eggs </a>
-      <a href="#"> Help Trader </a>
-      <a href="#"> Strange Things by the River </a>
-    </div>
-  </div> 
-
-  </div> 
-</div>
-<section>
-  <nav>
-    <ul>
-      <li><a href="#"> # </a></li>
-<br>
-      <li><a href="#"> # </a></li>
-<br>
-      <li><a href="#"> #</a></li>
-<br>
-    </ul>
-  </nav>
-  
-  <article>
-  <h2>Amegakure Boss Location</h2>
-  <a href="https://drive.google.com/uc?id=1ErdVSZgBmf0q6GKpOPp6aq-f1IeDzJPv" target="_blank">
-  <p><image src="https://drive.google.com/uc?id=1ErdVSZgBmf0q6GKpOPp6aq-f1IeDzJPv"; style="width:600px;height:500px;"></p></a>
+	<section>
+	<div w3-include-html="/sidebar.html"></div>
+	<article>
+	<h2>Amegakure Boss Location</h2>
+	<a href="https://drive.google.com/uc?id=1ErdVSZgBmf0q6GKpOPp6aq-f1IeDzJPv" target="_blank">
+	<p><image src="https://drive.google.com/uc?id=1ErdVSZgBmf0q6GKpOPp6aq-f1IeDzJPv"; style="width:600px;height:500px;"></p></a>
 
 	<a href="https://drive.google.com/uc?id=1MwJ6RAbo7Wz1deTaawqbWt7ndNq6ByAm" target="_blank" style="color:black">
 	<p> (1) <b>Blood Thirsty Spotted Hyena King</b> (Level 65) </p>
@@ -84,8 +58,8 @@
 	<p><image src="https://drive.google.com/uc?id=1JTnq3FwO28ac3VfhGZ7ebXcKLaFpfC65"; style="width:250px;height:250px"></p>
 	</a>
 
-  </article>
-</section>
+	</article>
+	</section>
 
 <footer>
   <p>Footer</p>
