Update and rename sunagkure.html to sunagakure.html

--- a/sunagakure.html
+++ b/sunagakure.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>  
-  <title>Sunagkure Boss Location</title>
+  <title>Sunagakure Boss Location</title>
 	<script>
 	function includeHTML() {
 	var z, i, elmnt, file, xhttp;
@@ -40,23 +40,23 @@
 	<div w3-include-html="/sidebar.html"></div>
 	<article>
     <h2>Land of River</h2>
-    <a href="sunagakure_boss_loc.png" target="_blank">
-    <p><image src="sunagakure_boss_loc.png"; style="width:600px;height:500px;"></p></a>
+    <a href="https://drive.google.com/uc?id=1ylOEQe0bQcBP4hXiBO3XoNTiZdgqx4r5" target="_blank">
+    <p><image src="https://drive.google.com/uc?id=1ylOEQe0bQcBP4hXiBO3XoNTiZdgqx4r5"; style="width:600px;height:500px;"></p></a>
 
 
-    <a href="blood_thirsty_hyena.jpg" target="_blank" style="color:black">
+    <a href="https://drive.google.com/uc?id=1ADRSdv1KHG5NbkG9QVZW9bdk0t8QXLVw" target="_blank" style="color:black">
     <p> (A) <b>Blood Thirsty Hyena</b> (Level 20) </p>
-    <image src="blood_thirsty_hyena.jpg"; style="width:250px;height:250px";>
+    <image src="https://drive.google.com/uc?id=1ADRSdv1KHG5NbkG9QVZW9bdk0t8QXLVw"; style="width:250px;height:250px";>
     </a>
 
-    <a href="rot_poison_sand_king.jpg" target="_blank" style="color:black">
+    <a href="https://drive.google.com/uc?id=1OavmCR2E5kG-ExWtDbWncUToNlqrNuTS" target="_blank" style="color:black">
     <p> (B) <b>Rot Poison Sand King</b> (Level 25) </p>
-    <p><image src="rot_poison_sand_king.jpg"; style="width:250px;height:250px"></p>
+    <p><image src="https://drive.google.com/uc?id=1OavmCR2E5kG-ExWtDbWncUToNlqrNuTS"; style="width:250px;height:250px"></p>
     </a>
 
-    <a href="sunagakure_rogue_leader.jpg" target="_blank" style="color:black">
+    <a href="https://drive.google.com/uc?id=1GODN5TPtENIoMrEwIfIKqehnYj3LBbhU" target="_blank" style="color:black">
     <p> (B) <b>Sunagakure Rogue Leader</b> (Level 30)</p>
-    <p><image src="sunagakure_rogue_leader.jpg"; style="width:250px;height:250px"></p>
+    <p><image src="https://drive.google.com/uc?id=1GODN5TPtENIoMrEwIfIKqehnYj3LBbhU"; style="width:250px;height:250px"></p>
     </a>
 
 	</article>
