--- a/sunagakure.html
+++ b/sunagakure.html
@@ -39,7 +39,7 @@
 	<section>
 	<div w3-include-html="/sidebar.html"></div>
 	<article>
-    <h2>Land of River</h2>
+    <h2>Sunagakure</h2>
     <a href="https://drive.google.com/uc?id=1ylOEQe0bQcBP4hXiBO3XoNTiZdgqx4r5" target="_blank">
     <p><image src="https://drive.google.com/uc?id=1ylOEQe0bQcBP4hXiBO3XoNTiZdgqx4r5"; style="width:600px;height:500px;"></p></a>
 
