--- a/konohagakure.html
+++ b/konohagakure.html
@@ -62,6 +62,11 @@
     <p style="text-align:left"> (4) <b> Furious Boar King </b> (Level 55)</p>
     <image src="https://drive.google.com/uc?id=1nmQ3D_gIOx03AdDm36Geow1bxBuJgdic"; style="width:250px;height:250px;">
     </a>
+	    
+    <a href="https://drive.google.com/uc?id=10tczXzoW0IrjmZCSGhPHF9JyXkatwM2A" target="_blank" style="color:black">
+    <p style="text-align:left"> (5) <b> Hidden Squad Captain </b> (Level 60)</p>
+    <image src="https://drive.google.com/uc?id=10tczXzoW0IrjmZCSGhPHF9JyXkatwM2A"; style="width:250px;height:250px;">
+    </a>
 		</article>
 	</section>
 
