--- a/landofriver.html
+++ b/landofriver.html
@@ -49,8 +49,13 @@
 		</a>
 
 		<a href="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ" target="_blank" style="color:black">
-		<p style="text-align:left"> (B) <b>Rampaging Thug</b> (Level 30)</p>
+		<p style="text-align:left"> (B) <b>Rampaging Thug</b> (Level 35)</p>
 		<p><image src="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ"; style="width:250px;height:250px;"></p></a>
+		</article>
+			
+		<a href="https://drive.google.com/uc?id=1hRDXtILycKdCbPi1Bh_3vVn1_DsPTzos" target="_blank" style="color:black">
+		<p style="text-align:left"> (B) <b>Furious Rogue Ninja</b> (Level 40)</p>
+		<p><image src="https://drive.google.com/uc?id=1hRDXtILycKdCbPi1Bh_3vVn1_DsPTzos"; style="width:250px;height:250px;"></p></a>
 		</article>
 	</section>
 
