--- a/rby.html
+++ b/rby.html
@@ -41,8 +41,10 @@
 		<article>
 		<h2>Red, Blue, Yellow Eggs</h2>
 		<p><i>*not sure what they’re exactly called*</i><p>
+		<br>
+			<p> Go to Konohagakure and proceed to the yellow location.</p>
 		<a href="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM" target="_blank">
-		<p><image src="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM"; style="width:600px;height:500px;"> Go to Konohagakure and proceed to the yellow location. </p></a>
+		<p><image src="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM"; style="width:600px;height:500px;"></p></a>
 
 		<a href="https://drive.google.com/uc?id=1a_o1Ej_EkS5wg4GDPmiYUFJVK0clbKeQ" target="_blank" style="color:black">
 		<p style="text-align:left"> You’ll see 3 sets of of red, blue, and yellow eggs. </p>
@@ -56,7 +58,8 @@
 		<a href="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy" target="_blank" style="color:black">
 		<p style="text-align:left"> Once everything has been set in place, it’ll start raining Level 1 Magatamas. (Level 40)</p>
 		<p><image src="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy"; style="width:600px;height:250px;"></p></a>
-		<ul> Important notes:
+		<p><br>Important notes:</br></p>
+		<ul> 
 		<li> If you double the color of one egg, you’ll get Ramens instead of Magatamas (example: blue, blue, red = Ramen) </li>
 		<li> One set consumes 3 big world points </li>
 		<li> Eggs respawns 5 minutes after consumed </li>
