--- a/rby.html
+++ b/rby.html
@@ -58,7 +58,7 @@
 		<a href="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy" target="_blank" style="color:black">
 		<p style="text-align:left"> Once everything has been set in place, it’ll start raining Level 1 Magatamas. (Level 40)</p>
 		<p><image src="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy"; style="width:600px;height:250px;"></p></a>
-		<p><br>Important notes:</br></p>
+		<p><b>Important notes:</b></p>
 		<ul> 
 		<li> If you double the color of one egg, you’ll get Ramens instead of Magatamas (example: blue, blue, red = Ramen) </li>
 		<li> One set consumes 3 big world points </li>
