--- a/rby.html
+++ b/rby.html
@@ -56,7 +56,7 @@
 		<p><image src="https://drive.google.com/uc?id=1B8spr3tPPItGb4bXcKqXzmr6ej_w8cTa"; style="width:600px;height:250px;"></p></a>
 			
 		<a href="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy" target="_blank" style="color:black">
-		<p style="text-align:left"> Once everything has been set in place, it’ll start raining Level 1 Magatamas. (Level 40)</p>
+		<p style="text-align:left"> Once everything has been set in place, it’ll start raining Level 1 Magatamas.</p>
 		<p><image src="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy"; style="width:600px;height:250px;"></p></a>
 		<p><b>Important notes:</b></p>
 		<ul> 
