--- a/ht.html
+++ b/ht.html
@@ -49,24 +49,24 @@
 		<a href="https://drive.google.com/uc?id=1tyS8qtTKQLY5nGq2698a312SJZ6n8Ju4" target="_blank">
 		<p><image src="https://drive.google.com/uc?id=1tyS8qtTKQLY5nGq2698a312SJZ6n8Ju4"; style="width:600px;height:500px;"></p></a>
 
-		<a href=" xx " target="_blank" style="color:black">
-		<p style="text-align:left"> xx </p>
-		<image src="xx "; style="width:600px;height:250px;";>
+		<a href="https://drive.google.com/uc?id=1XkP9ARcZPNCkNcCQTzrSEK6YpmaL_qiM" target="_blank" style="color:black">
+		<p style="text-align:left"> Locate any trader that still has barrels / boxes beside them. </p>
+		<image src="https://drive.google.com/uc?id=1XkP9ARcZPNCkNcCQTzrSEK6YpmaL_qiM"; style="width:600px;height:250px;";>
 		</a>
 
-		<a href=" xx " target="_blank" style="color:black">
-		<p style="text-align:left"> xx </p>
-		<image src="xx "; style="width:600px;height:250px;";>
+		<a href="https://drive.google.com/uc?id=1DpzuGhPuMEJ9KAcZgMBi7FZSDR4YVL1N" target="_blank" style="color:black">
+		<p style="text-align:left"> You will need to drop the boxes at the traders. </p>
+		<image src="https://drive.google.com/uc?id=1DpzuGhPuMEJ9KAcZgMBi7FZSDR4YVL1N"; style="width:600px;height:250px;";>
 		</a>
 			
-		<a href=" xx " target="_blank" style="color:black">
-		<p style="text-align:left"> xx </p>
-		<image src="xx "; style="width:600px;height:250px;";>
+		<a href="https://drive.google.com/uc?id=1_H4ZV6kLvnqROhE3EmoOLrOjYi1uHQGH" target="_blank" style="color:black">
+		<p style="text-align:left"> You may do this for 10 times each day per map to claim Ramen, Coins, or Enchance Charm I </p>
+		<image src="https://drive.google.com/uc?id=1_H4ZV6kLvnqROhE3EmoOLrOjYi1uHQGH"; style="width:600px;height:250px;";>
 		</a>
 
 		</article>
 	</section>
- 
+
 <footer>
   <p>Footer</p>
 </footer>
