--- a/landofriver.html
+++ b/landofriver.html
@@ -44,12 +44,11 @@
 		<image src="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo"; style="width:600px;height:500px;"></a>
 
 		<a href="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k"; style="width:250px;height:250px;";>
-		</a>
+		<image src="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k"; style="width:250px;height:250px;";></a>
 		<p> (A) <b>Furious Alpha Wolf</b> (Level 30) </p>			
 
 		<a href="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ" target="_blank" style="color:black">
-		<p><image src="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ"; style="width:250px;height:250px;"></p></a>
+		<image src="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ"; style="width:250px;height:250px;"></a>
 		<p> (B) <b>Rampaging Thug</b> (Level 35)</p>
 		
 		<a href="https://drive.google.com/uc?id=1hRDXtILycKdCbPi1Bh_3vVn1_DsPTzos" target="_blank" style="color:black">
