--- a/rby.html
+++ b/rby.html
@@ -41,29 +41,30 @@
 		<article>
 		<h2>Red, Blue, Yellow Eggs</h2>
 		<p><i>*not sure what they’re exactly called*</i><p>
-		<hr>
-		<p> Go to Konohagakure and proceed to the yellow location.</p>
+<hr>
 		<a href="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM" target="_blank">
-		<p><image src="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM"; style="width:600px;height:500px;"></p></a>
-
+		<image src="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM"; style="width:600px;height:500px;"></a>
+		<p> Go to Konohagakure and proceed to the yellow location.</p>
+<hr>
 		<a href="https://drive.google.com/uc?id=1a_o1Ej_EkS5wg4GDPmiYUFJVK0clbKeQ" target="_blank" style="color:black">
-		<p style="text-align:left"> You’ll see 3 sets of of red, blue, and yellow eggs. </p>
-		<image src="https://drive.google.com/uc?id=1a_o1Ej_EkS5wg4GDPmiYUFJVK0clbKeQ"; style="width:600px;height:250px;";>
-		</a>
-
+		<image src="https://drive.google.com/uc?id=1a_o1Ej_EkS5wg4GDPmiYUFJVK0clbKeQ"; style="width:600px;height:250px;";></a>
+		<p> You’ll see 3 sets of of red, blue, and yellow eggs. </p>
+<hr>
 		<a href="https://drive.google.com/uc?id=1B8spr3tPPItGb4bXcKqXzmr6ej_w8cTa" target="_blank" style="color:black">
-		<p style="text-align:left"> Set the eggs at the markings located near the area. </p>
-		<p><image src="https://drive.google.com/uc?id=1B8spr3tPPItGb4bXcKqXzmr6ej_w8cTa"; style="width:600px;height:250px;"></p></a>
+		<image src="https://drive.google.com/uc?id=1B8spr3tPPItGb4bXcKqXzmr6ej_w8cTa"; style="width:600px;height:250px;"></a>
+		<p> Set the eggs at the markings located near the area. </p>
 			
 		<a href="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy" target="_blank" style="color:black">
-		<p style="text-align:left"> Once everything has been set in place, it’ll start raining Level 1 Magatamas.</p>
-		<p><image src="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy"; style="width:600px;height:250px;"></p></a>
+		<image src="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy"; style="width:600px;height:250px;"></a>
+		<p> Once everything has been set in place, it’ll start raining Level 1 Magatamas.</p>
+<hr>
 		<p><b>Important notes:</b></p>
 		<ul> 
 		<li> If you double the color of one egg, you’ll get Ramens instead of Magatamas (example: blue, blue, red = Ramen) </li>
 		<li> One set consumes 3 big world points </li>
 		<li> Eggs respawns 5 minutes after consumed </li>
 		</ul>
+<hr>
 		</article>
 	</section>
 
