--- a/rby.html
+++ b/rby.html
@@ -43,7 +43,7 @@
 		<p><i>*not sure what they’re exactly called*</i><p>
 <hr>
 		<a href="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM" target="_blank">
-		<image src="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM"; style="width:600px;height:500px;"></a>
+		<image src="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM"; style="float:right;width:600px;height:500px;"></a>
 		<p> Go to Konohagakure and proceed to the yellow location.</p>
 <hr>
 		<a href="https://drive.google.com/uc?id=1a_o1Ej_EkS5wg4GDPmiYUFJVK0clbKeQ" target="_blank" style="color:black">
