--- a/rby.html
+++ b/rby.html
@@ -39,7 +39,7 @@
 	<section>
 	<div w3-include-html="/sidebar.html"></div>
 		<article>
-		<h2>Red, Blue, Yellow Eggs</h2>
+		<h2>Red, Blue, Yellow "Eggs"</h2>
 		<p><i>*not sure what they’re exactly called*</i><p>
 <hr>
 		<a href="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM" target="_blank">
@@ -60,9 +60,9 @@
 <hr>
 		<p><b>Important notes:</b></p>
 		<ul> 
-		<li> If you double the color of one egg, you’ll get Ramens instead of Magatamas (example: blue, blue, red = Ramen) </li>
-		<li> One set consumes 3 big world points </li>
-		<li> Eggs respawns 5 minutes after consumed </li>
+		<li> If you repeat the color of one egg, you’ll get Ramens instead of Magatamas (example: blue + blue + red = Ramen) </li>
+		<li> One set consumes 3 big world points but you may repeat the RBY eggs 4 times with the 4th giving less magatamas </li>
+		<li> The eggs respawns after 5 minutes and will disappear when you are carrying one </li>
 		</ul>
 <hr>
 		</article>
