--- a/landofriver.html
+++ b/landofriver.html
@@ -41,7 +41,7 @@
 		<article>
 		<h2>Land of River</h2>
 		<a href="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo" target="_blank">
-		<image src="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo"; style="width:600px;height:500px;"></a>
+		<p><image src="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo"; style="width:600px;height:500px;"></a></p>
 
 		<a href="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k"; style="width:250px;height:250px;";></a>
