--- a/afd.html
+++ b/afd.html
@@ -49,12 +49,12 @@
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
-		<image src="xx"; style="float:right;width:600px;height:250px;";></a>
+		<image src=""https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv"; style="width:600px;height:250px;";></a>
   </div>
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP"; style="float:left;width:600px;height:250px;";></a>
+		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP"; style="width:600px;height:250px;";></a>
   </div>
 
 </div>
