--- a/afd.html
+++ b/afd.html
@@ -35,16 +35,14 @@
 <body>
 	<div w3-include-html="/navbar.html"></div> 
 	<script>includeHTML();</script>
-
-	<section>
 	<div w3-include-html="/sidebar.html"></div>
-		<article>
 		<h2>Arrest Fake Daimyo</h2>
 <hr>
 		<a href="#" target="_blank">
 		<image src="xx"; style="width:600px;height:500px;"></a>
 		<p>#</p>
 <hr>
+<div w3-include-html="/sidebar.html"></div>			
 <div class="row">
 
   <div class="column">
@@ -59,8 +57,6 @@
 
 </div>
 <hr>
-		</article>
-	</section>
 
 <footer>
   <p>Footer</p>
