--- a/afd.html
+++ b/afd.html
@@ -37,21 +37,133 @@
 	<script>includeHTML();</script>
 		<h2>Arrest Fake Daimyo</h2>
 <hr>
-		<a href="#" target="_blank">
-		<image src="xx"; style="width:600px;height:500px;"></a>
-		<p>#</p>
-<hr>		
+		<a href="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q" target="_blank">
+		<image src="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q"; style="width:600px;height:500px;"></a>
+		<p>Arrest Fake Daimyo bounty can only be claimed by 10 players each day. 
+		See the “Remaining” at the lower right of the picture for remaining amount. 
+		Players may claim the bounty more than once. 
+		Arrest Fake Daimyo cannot be done with party but is very easy to accomplish.</p>
+<hr>
+/* location 1 */		
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB"; style="width:100%;height:250px;";></a>
+		<p>xx</p>
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1JdGO9bwqH-7Vi4HckexiG37B27vS5gL3" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1JdGO9bwqH-7Vi4HckexiG37B27vS5gL3"; style="width:100%;height:250px;";></a>
+		<p>xx</p>
   </div>
+  </div>
+
+
+<hr>
+/* location 2 */
+<div class="row">
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+<p>xx</p>
+<hr>
+/* location 3 */
+<div class="row">
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+<p>xx</p>
+<hr>
+/* location 4 */
+<div class="row">
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+<p>xx</p>
+<hr>
+/* location 5 */
+<div class="row">
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+<p>xx</p>
+<hr>
+/* location 6 */
+<div class="row">
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+<p>xx</p>
+<hr>
+/* location 7 */
+<div class="row">
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+<p>xx</p>
+<hr>
+/* location 8 */
+<div class="row">
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
+<p>xx</p>
+<hr>
+
+
+
+
 
 </div>
 <hr>
