--- a/afd.html
+++ b/afd.html
@@ -38,7 +38,7 @@
 		<h2>Arrest Fake Daimyo</h2>
 <hr>
 		<a href="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q" target="_blank">
-		<image src="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q"; style="width:600px;height:500px;"></a>
+		<image src="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q"; style="width:600px;height:250px;text-align: center;"></a>
 		<p>Arrest Fake Daimyo bounty can only be claimed by 10 players each day. 
 		See the “Remaining” at the lower right of the picture for remaining amount. 
 		Players may claim the bounty more than once. 
