--- a/afd.html
+++ b/afd.html
@@ -39,7 +39,7 @@
 <hr>
 		<a href="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q" target="_blank">
 		<image src="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q"; style="width:600px;height:255px;text-align: center;" class="center"></a>
-		<p>Arrest Fake Daimyo bounty can only be claimed by 10 players each day. 
+		<p style="text-align:center">Arrest Fake Daimyo bounty can only be claimed by 10 players each day. 
 		See the “Remaining” at the lower right of the picture for remaining amount. 
 		Players may claim the bounty more than once. 
 		Arrest Fake Daimyo cannot be done with party but is very easy to accomplish.</p>
@@ -54,9 +54,9 @@
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1JdGO9bwqH-7Vi4HckexiG37B27vS5gL3" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1JdGO9bwqH-7Vi4HckexiG37B27vS5gL3"; style="width:100%;height:250px;";></a>
-		<p>xx</p>
+		<a href="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe"; style="width:100%;height:250px;";></a>
+		<p>Hint: Ruins</p>
   </div>
   </div>
 
@@ -66,13 +66,13 @@
 <div class="row">
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=16lsn5jiOTZ2xLRCOzoThB1_A9TZFXe_a" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=16lsn5jiOTZ2xLRCOzoThB1_A9TZFXe_a"; style="width:100%;height:250px;";></a>
   </div>
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1KvH6Z-318lxa1TXumWdgoZJXxBUwbJ_t" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1KvH6Z-318lxa1TXumWdgoZJXxBUwbJ_t"; style="width:100%;height:250px;";></a>
   </div>
 <p>xx</p>
 <hr>
@@ -80,13 +80,13 @@
 <div class="row">
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1meYYIo9sTGMwntGlgKxVSXWv786QMxT2" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1meYYIo9sTGMwntGlgKxVSXWv786QMxT2"; style="width:100%;height:250px;";></a>
   </div>
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1KTwweG31q_YxwnHgQ-edRLFTuyW3ljTB" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1KTwweG31q_YxwnHgQ-edRLFTuyW3ljTB"; style="width:100%;height:250px;";></a>
   </div>
 <p>xx</p>
 <hr>
